# MCP

./: .gitignore  README.md  mcp_server.py  mcp_server_dom_analyzer.py  orchestrator_mbp0.py  orchestrator_mbp1.py  orchestrator_mbp1_dom_analyzer.py  pyproject.toml
config/: security.yml  timeouts.yml
data/: top_sites.txt
docs/: MBP-0 план.md  MBP-1 план.md  SYSTEM_PROMPT_Браузерный ассистент.md  SYSTEM_PROMPT_Браузерный ассистент_DOM_анализатор.md  Микроциклы MVP-1.md  Общий план.md  План реализации браузерного ассистента (цикл).md  Текущий статус проекта.md  Требования к браузерному ассистенту.md  ФИНАЛЬНЫЙ_ОТЧЕТ_ИНТЕГРАЦИИ.md
dom_analyzer/: README.md  __init__.py  accessibility_parser.py  cdp_client.py  config.py  dom_analyzer.py  element_indexer.py  mcp_server.py  mcp_tools.py  requirements.txt  types.py
scripts/: aggregate_close_banners.py  demo_browser_workflow.py  mcp_call.py  run_close_banners_batch.sh  run_demo_mbp0.sh  site_full_suite.py  site_smoke_suite.py
tools/: browser_stub.py  files_stub.py
