[project]
name = "mcp-fs-tools"
version = "0.1.0"
description = "Minimal MCP server exposing filesystem tools (create/read/write/search/move/delete)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
  "mcp[cli]",
  "playwright",
  "pillow",
  "google-generativeai>=0.7.2",
  "python-dotenv>=1.0.0",
  "PyPDF2>=3.0.0",
  "python-docx>=1.1.2",
  "pytesseract>=0.3.13"
]

[project.scripts]
mcp-fs-server = "mcp_fs_tools.server:main"
mcp-browser-server = "mcp_browser.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_fs_tools*"]
exclude = []

